[gd_scene load_steps=9 format=3 uid="uid://myamdhu8jx4r"]

[ext_resource type="Script" path="res://Scripts/false_victory.gd" id="1_ohd5w"]
[ext_resource type="Texture2D" uid="uid://np7odqrvmm3a" path="res://Base Assets/Bad Ending.png" id="2_aecsb"]
[ext_resource type="AudioStream" uid="uid://bkymml382x5rl" path="res://Sound/Bad Ending.mp3" id="3_kae7n"]

[sub_resource type="Theme" id="Theme_6tdkd"]
default_font_size = 30

[sub_resource type="Animation" id="Animation_ygjdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7g3vs"]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_n63m6"]
resource_name = "intro_yap"
length = 15.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfo6x"]
_data = {
"RESET": SubResource("Animation_ygjdc"),
"fade": SubResource("Animation_7g3vs"),
"intro_yap": SubResource("Animation_n63m6")
}

[node name="FalseVictory" type="Node2D"]
script = ExtResource("1_ohd5w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("2_aecsb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NextButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 43.404
anchor_top = 25.604
anchor_right = 54.775
anchor_bottom = 30.426
offset_left = -826.16
offset_top = -463.16
offset_right = -1110.0
offset_bottom = -606.04
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_6tdkd")
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bfo6x")
}

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kae7n")
volume_db = -12.0

[connection signal="pressed" from="CanvasLayer/Control/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
